k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/healthcheck-path: /health   
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      # - path: /api
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-service
      #       port:
      #         number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
